--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,110 @@
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600,800,900" rel="stylesheet" type="text/css">
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+  <script type="text/javascript">
+
+  </script>
+  <script type="text/javascript">
+    // More API functions here:
+    // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
+
+    // the link to your model provided by Teachable Machine export panel
+    const URL = "./model/";
+
+    let model, webcam, labelContainer, maxPredictions, startFlag = true;
+
+    // Load the image model and setup the webcam
+    async function init() {
+
+
+
+      //1. show loading bar
+      //2. hide Start Btn
+
+      const modelURL = URL + "model.json";
+      const metadataURL = URL + "metadata.json";
+
+      // load the model and metadata
+      // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
+      // or files from your local hard drive
+      // Note: the pose library adds "tmImage" object to your window (window.tmImage)
+      model = await tmImage.load(modelURL, metadataURL);
+      maxPredictions = model.getTotalClasses();
+
+      // Convenience function to setup a webcam
+      const flip = true; // whether to flip the webcam
+      webcam = new tmImage.Webcam(450, 300, flip); // width, height, flip
+      await webcam.setup(); // request access to the webcam
+      await webcam.play();
+      window.requestAnimationFrame(loop);
+
+      // append elements to the DOM
+      document.getElementById("webcam-container").appendChild(webcam.canvas);
+      labelContainer = document.getElementById("label-container");
+      for (let i = 0; i < maxPredictions; i++) { // and class labels
+        labelContainer.appendChild(document.createElement("div"));
+      }
+      startBtnEvent(startFlag);
+
+    }
+
+    async function loop() {
+      webcam.update(); // update the webcam frame
+      try {
+        await predict();
+        window.requestAnimationFrame(loop);
+      } catch (e) {
+        // statements to handle any exceptions
+      }
+
+    }
+
+    // run the webcam image through the image model
+    async function predict() {
+      // predict can take in an image, video or canvas html element
+      const prediction = await model.predict(webcam.canvas);
+      for (let i = 0; i < maxPredictions; i++) {
+        const classPrediction =
+          prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+        labelContainer.childNodes[i].innerHTML = classPrediction;
+      }
+    }
+
+    function stop() {
+      startBtnEvent(startFlag);
+      webcam.stop();
+    }
+
+    function startBtnEvent(isStart) {
+      if (isStart) {
+        document.getElementById("start-btn").style.display = "none";
+        document.getElementById("stop-btn").style.display = "inline";
+        document.getElementById("focus-logo").style.display = "none";
+      } else {
+        let docWebContainer = document.getElementById("webcam-container");
+        docWebContainer.removeChild(docWebContainer.childNodes[0]);
+        let docLabelContainer = document.getElementById("label-container");
+        while (docLabelContainer.hasChildNodes()) {
+          docLabelContainer.removeChild(docLabelContainer.firstChild);
+        }
+        document.getElementById("start-btn").style.display = "inline";
+        document.getElementById("stop-btn").style.display = "none";
+        document.getElementById("focus-logo").style.display = "inline";
+
+      }
+      startFlag = !startFlag;
+    }
+  </script>
+
   <title>Focus</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="container"></div>
   <div id="root"></div>
   <!--
       This HTML file is a template.
